# Old-Projects

./: README.md  misc.java
68k decoder/: Decode fast.asm  build.bat  err.txt  font.unc  main.asm  test.asm  test.txt
68k opcodes/: test info.asm  test raw.asm
68kdasm/: 68kdasm.csproj  68kdasm.sln  Exceptions.cs  Program.cs
AMPS Optimizer/: AMPS Optimizer.sln  CurrentSettings.vssettings
Achi/: Constants.asm  Macros.asm  Variables.asm  build rel.bat  build.bat  errors.txt  sonic.asm
Battle Race/: .gitattributes  .gitignore  SRAM.asm  bugs.txt  build.bat  sonic3k.asm  sonic3k.constants.asm  sonic3k.macros.asm  sonic3k.macrosetup.asm  todo.txt
Broken im 0/: build.bat  main.asm
ChaotixCompressor/: ChaotixCompressor.csproj  ChaotixCompressor.sln  Program.cs
CheckMaxTilesDPLC/: CheckMaxTilesDPLC.sln
ConvertS1MapsToS3KFormat/: ConvertS1MapsToS3KFormat.csproj  ConvertS1MapsToS3KFormat.sln  Program.cs
DirtyPCM2PWM/: DirtyPCM2PWM.sln
DisasmProcess/: DisasmProcess.sln
DisassemblyVariableEquator/: DisassemblyVariableEquator.sln
GEMS2SMPS/: GEMS2SMPS.sln
GnG2SMPS/: GnG2SMPS.VC.db  GnG2SMPS.csproj  GnG2SMPS.sln  Program.cs
HintTableCreator/: Form1.Designer.cs  Form1.cs  HintTableCreator.csproj  HintTableCreator.sln  Program.cs
LevelGenerator/: LevelGenerator.sln
MDASM/: MDASM.psess  MDASM.sln  MDASM1.psess
MDDC videos/: .gitignore  README.md  logotest.html  resolution.html
MEGA-USB/: mega-usb.sln
MainMenuCardMaker/: MainMenuCardMaker.sln
MegaDebugger/: Form1.Designer.cs  Form1.cs  Form1.resx  MEDwriter.cs  MegaDebugger.csproj  MegaDebugger.sdf  MegaDebugger.sln  Program.cs
Nem2Kosm/: Nem2Kosm.sln
ObjectsCPUComp/: build.bat  font.unc  main.asm
RAGE 16/: A.MD  ARROW.UNC  BUILD.BAT  CONVERT.JAVA  DAY1.MD  DAY2.MD  DAY3.MD  DIFF.UNC  END.UNC  EQU.ASM  ERR.TXT  INIT.ASM  LIB.ASM  MAIN.ASM  MAIN.PAL  OBJS.ASM  PLAYER.UNC  SPIKE1.UNC  SPIKE2.UNC  SPIKE3.UNC  SPIKE4.UNC  SPIKEV1.UNC  SPIKEV2.UNC  SPIKEV3.UNC  SPIKEV4.UNC  SPRING.UNC  SPRINGV.UNC  TITLE1.UNC  TITLE2.UNC  VINT.ASM
Regen cycle accuracy tester/: build.bat  (+1 more)
asm68k/: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CodeStyle.md  README.md
asm68k/cmake/: ExecuteReferenceTest.cmake
asm68k/data/: hashList.txt
asm68k/data/tests/: create.bat  run.bat
asm68k/data/tests/68000/: main.asm
asm68k/data/tests/68000_optimization/: main.asm
asm68k/data/tests/case_sensitive/: main.asm
asm68k/data/tests/cmd_EQU/: main.asm
asm68k/data/tests/dc/: main.asm
asm68k/data/tests/equr/: main.asm
asm68k/data/tests/expressions/: main.asm
asm68k/data/tests/files/: main.asm  test.asm
asm68k/data/tests/functions/: main.asm
asm68k/data/tests/pass2/: main.asm
asm68k/data/tests/variables/: main.asm
asm68k/scratchpad/: ideas.txt
asm68k/src/asmlink/: debug_tracer.c  debug_tracer.h  symbol_ext.c  symbol_ext.h
asm68k/src/asmlink/messages/: global.h
asm68k/src/assembler/: args.c  args.h  assembler.h  error.c  error.h  hash.c  hash.h  listings.c  listings.h  main.c  object.c  object.h  parse.c  parse.h  pass2.c  pass2.h  symbol_file.c  symbol_file.h  unsorted.h
asm68k/src/assembler/68k/: 68000.c  68000.h
asm68k/src/assembler/builtins/: directives.c  directives.h  functions.c  functions.h  variables.c  variables.h
asm68k/src/assembler/messages/: 680x0.h  directives.h  misc.h
asm68k/src/hashgen/: hashgen.c  messages.c
asm68k/src/lib/: arguments.c  arguments.h  compat.h  debug.c  debug.h  error_lib.c  error_lib.h  expressions.c  expressions.h  files.c  files.h  hash_lib.h  lengthstring.c  lengthstring.h  math_lib.h  string_lib.c  string_lib.h  symbol_table.c  symbol_table.h  symbols.h  tracer_dummy.h
asm68k/src/lib/messages/: expressions.h  global.h
asm68k/src/lstdiff/: compare.c  compare.h  lines.c  lines.h  main.c  main.h  uimode.c  uimode.h
(+3101 files in other folders)
